--- a/srcs/mariadb/Dockerfile
+++ b/srcs/mariadb/Dockerfile
@@ -6,19 +6,20 @@
 #    By: rgirondo <rgirondo@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/06/06 16:29:52 by rgirondo          #+#    #+#              #
-#    Updated: 2023/06/15 16:09:42 by rgirondo         ###   ########.fr        #
+#    Updated: 2023/06/15 18:19:24 by rgirondo         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 FROM		debian:buster
 
+
 RUN			apt-get -y					update
 RUN			apt-get -y					upgrade
-RUN			apt -y install				nginx openssh-server openssl
-COPY		./conf/default				/etc/nginx/sites-available/default
-COPY		./conf/nginx.conf			/etc/nginx/nginx.conf
-RUN			mkdir					    /etc/nginx/ssl
-RUN			chmod 700				    /etc/nginx/ssl
-RUN			openssl						req -x509 -nodes -days 365 -newkey rsa:2048 -subj "/C=SP/ST=Spain/L=Madrid/O=42Madrid/CN=127.0.0.1" -keyout /etc/nginx/ssl/example.key -out /etc/nginx/ssl/example.crt
+RUN         apt-get -y                  install mariadb-server mariadb-client
 
-CMD			["nginx", "-g", "daemon off;"]
+COPY        ./50-server.cnf             /etc/mysql/mariadb.conf.d/
+COPY        ./util.sh                   .
+
+EXPOSE		3306
+
+CMD [ "bash", "util.sh" ]
