--- a/srcs/mariadb/Dockerfile
+++ b/srcs/mariadb/Dockerfile
@@ -6,7 +6,7 @@
 #    By: rgirondo <rgirondo@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/06/06 16:29:52 by rgirondo          #+#    #+#              #
-#    Updated: 2023/06/15 18:19:24 by rgirondo         ###   ########.fr        #
+#    Updated: 2023/06/23 19:31:02 by rgirondo         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,8 +17,8 @@ RUN			apt-get -y					update
 RUN			apt-get -y					upgrade
 RUN         apt-get -y                  install mariadb-server mariadb-client
 
-COPY        ./50-server.cnf             /etc/mysql/mariadb.conf.d/
-COPY        ./util.sh                   .
+COPY        ./mariadb/50-server.cnf             /etc/mysql/mariadb.conf.d/
+COPY        ./mariadb/util.sh                   .
 
 EXPOSE		3306
 
