contenedor wordpress daemonizado con todo php configurado y enlazado con nginx, volumenes corregidos y makefile arreglado, solo me queda configurar wordpress y enlazarlo con la base de datos

--- a/srcs/wordpress-php/Dockerfile
+++ b/srcs/wordpress-php/Dockerfile
@@ -6,7 +6,7 @@
 #    By: rgirondo <rgirondo@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/06/11 12:59:34 by rgirondo          #+#    #+#              #
-#    Updated: 2023/06/15 18:18:00 by rgirondo         ###   ########.fr        #
+#    Updated: 2023/07/09 11:17:17 by rgirondo         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,12 +14,24 @@ FROM		debian:buster
 
 RUN			apt-get -y					update
 RUN			apt-get -y					upgrade
-RUN			apt -y install				php-mysql php-fpm curl wget
+RUN			apt -y install				php-mysql php-fpm curl wget vim
+
+COPY        ./wordpress-php/conf/www.conf   /etc/php/7.3/fpm/pool.d/
 
 WORKDIR		/var/www/html
+
 RUN			wget						https://wordpress.org/wordpress-6.0.tar.gz
 RUN			tar							-xvzf wordpress-6.0.tar.gz && rm -rf wordpress-6.0.tar.gz
+RUN         chmod                       -R 755 wordpress
+RUN         chown                       -R www-data:www-data wordpress
+RUN         mv                          wordpress/* .
+
+COPY        ./wordpress-php/util.sh                   .
+
+RUN         mkdir                       /run/php
+RUN         chmod                       -R 755 /run/php
+RUN         service                     php7.3-fpm stop
 
 EXPOSE		9000	
 
-CMD [ "bash" ]
+ENTRYPOINT [ "./util.sh" ]
