--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -15,6 +15,9 @@ version: '3.9'
 services:
   
   nginx:
+
+    depends_on:
+      - wordpress
   
     build:
 
@@ -29,8 +32,11 @@ services:
     ports: 
       - "443:443"
 
+    volumes:
+      - volumen_wordpress:/var/www/html
+
     networks:
-      - network
+      - network_1
 
     logging:
       driver: "none"
@@ -55,12 +61,18 @@ services:
     logging:
       driver: "none"
 
-    networks:
-      - network
+    volumes:
+      - volumen_mariadb:/var/lib/mysql
 
-    #restart: unless-stopped
+    networks:
+      - network_1
+
+    restart: unless-stopped
 
   wordpress:
+
+    depends_on:
+      - db
 
     env_file:
       - ./.env
@@ -78,8 +90,11 @@ services:
     logging:
       driver: "none"
 
+    volumes:
+      - volumen_wordpress:/var/www/html
+
     networks:
-      - network
+      - network_1
 
     #restart: unless-stopped
 
@@ -89,7 +104,7 @@ volumes:
     name: wordpress
     driver: local
     driver_opts:
-      device: ~/42madrid/wordpress
+      device: /home/rgirondo/data/wordpress
       o: bind
       type: none
 
@@ -97,9 +112,9 @@ volumes:
     name: mariadb
     driver: local
     driver_opts:
-      device: ~/42madrid/mariadb
+      device: /home/rgirondo/data/mariadb
       o: bind
       type: none
 
 networks:
-  network:
+  network_1:
