proyecto con requisitos del subject casi terminados solo me queda organizar mi estructura de directorios

--- a/srcs/.env
+++ b/srcs/.env
@@ -2,3 +2,10 @@ DATABASE=db_wordpress
 DATABASE_ROOT_PASSWORD=mondongo
 DATABASE_USER=rgirondo
 DATABASE_PASSWORD=mondongo
+DATABASE_HOST=mariadb:3306
+WP_DIR=/var/www/html
+WP_NAME=Inception
+WP_USERNAME=rodrigo
+WP_URL=localhost
+WP_USERPASS=mondongo
+WP_EMAIL=rodrigo@girondo.perales
