--- a/srcs/mariadb/Dockerfile
+++ b/srcs/mariadb/Dockerfile
@@ -6,7 +6,7 @@
 #    By: rgirondo <rgirondo@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/06/06 16:29:52 by rgirondo          #+#    #+#              #
-#    Updated: 2023/07/07 00:43:22 by rgirondo         ###   ########.fr        #
+#    Updated: 2023/07/19 20:59:55 by rgirondo         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,11 +15,15 @@ FROM		debian:buster
 
 RUN			apt-get -y					update
 RUN			apt-get -y					upgrade
-RUN         apt-get -y                  install mariadb-server
+RUN         apt-get -y                  install mariadb-server systemd-sysv vim
 
 COPY        ./mariadb/50-server.cnf             /etc/mysql/mariadb.conf.d/
 COPY        ./mariadb/util.sh                   .
 
+RUN         chmod 755                   /util.sh
+
 EXPOSE		3306
 
 ENTRYPOINT [ "./util.sh" ]
+
+#CMD [ "tail", "-f" ]
